[gd_scene load_steps=2 format=3 uid="uid://dkacahcwucuc6"]

[ext_resource type="Script" path="res://scenes/server_selection.gd" id="1_ygnkg"]

[node name="server_selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ygnkg")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.382504, 0.418663, 0.442298, 1)

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="vbox" type="VBoxContainer" parent="margin"]
layout_mode = 2

[node name="add_new" type="HBoxContainer" parent="margin/vbox"]
layout_mode = 2

[node name="ip_label" type="Label" parent="margin/vbox/add_new"]
layout_mode = 2
text = "ip address:"

[node name="ip" type="LineEdit" parent="margin/vbox/add_new"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "255.255.255.255:25555"
max_length = 100

[node name="name_label" type="Label" parent="margin/vbox/add_new"]
layout_mode = 2
text = "Name:"

[node name="name" type="LineEdit" parent="margin/vbox/add_new"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Server name"
max_length = 100

[node name="Button" type="Button" parent="margin/vbox/add_new"]
layout_mode = 2
text = "Add new server"

[node name="scroll" type="ScrollContainer" parent="margin/vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="margin/vbox/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="vbox" type="VBoxContainer" parent="margin/vbox/scroll/margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="del_confirm_window" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 376.0
offset_top = 209.0
offset_right = -376.0
offset_bottom = -314.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="ColorRect" parent="del_confirm_window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48834, 0.528405, 0.554634, 1)

[node name="vbox" type="VBoxContainer" parent="del_confirm_window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="label" type="Label" parent="del_confirm_window/vbox"]
layout_mode = 2
text = "Are you sure?
You want to delete server:
\"Server of my friends\""
horizontal_alignment = 1

[node name="buttons" type="HBoxContainer" parent="del_confirm_window/vbox"]
layout_mode = 2
alignment = 1

[node name="ok" type="Button" parent="del_confirm_window/vbox/buttons"]
layout_mode = 2
text = "Ok"

[node name="cancel" type="Button" parent="del_confirm_window/vbox/buttons"]
layout_mode = 2
text = "Cancel"

[node name="auth_rect" type="ReferenceRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -110.0
offset_right = 160.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="auth_window" type="Control" parent="auth_rect"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="ColorRect" parent="auth_rect/auth_window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48834, 0.528405, 0.554634, 1)

[node name="vbox" type="VBoxContainer" parent="auth_rect/auth_window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="label" type="Label" parent="auth_rect/auth_window/vbox"]
layout_mode = 2
text = "This server require auth:"
horizontal_alignment = 1

[node name="margin" type="MarginContainer" parent="auth_rect/auth_window/vbox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="vbox" type="VBoxContainer" parent="auth_rect/auth_window/vbox/margin"]
layout_mode = 2

[node name="login" type="LineEdit" parent="auth_rect/auth_window/vbox/margin/vbox"]
layout_mode = 2
placeholder_text = "Your login"

[node name="password" type="LineEdit" parent="auth_rect/auth_window/vbox/margin/vbox"]
layout_mode = 2
placeholder_text = "Your password"
secret = true
secret_character = "‚≠ê"

[node name="login" type="Button" parent="auth_rect/auth_window/vbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Enter"

[node name="cancel" type="Button" parent="auth_rect/auth_window/vbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"

[node name="waiting" type="ReferenceRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -60.0
offset_right = 110.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="waiting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.490196, 0.529412, 0.552941, 1)

[node name="vbox" type="VBoxContainer" parent="waiting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="hello" type="Label" parent="waiting/vbox"]
layout_mode = 2
text = "Hello Bachus
"
horizontal_alignment = 1

[node name="server" type="Label" parent="waiting/vbox"]
layout_mode = 2
text = "Server: Babajaba"
horizontal_alignment = 1

[node name="state" type="Label" parent="waiting/vbox"]
layout_mode = 2
text = "Try to login üî•"
horizontal_alignment = 1

[node name="progress" type="ProgressBar" parent="waiting/vbox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 4.0
step = 1.0
show_percentage = false

[connection signal="pressed" from="margin/vbox/add_new/Button" to="." method="_add_server_pressed"]
[connection signal="pressed" from="del_confirm_window/vbox/buttons/ok" to="." method="_del_confirm_pressed"]
[connection signal="pressed" from="del_confirm_window/vbox/buttons/cancel" to="." method="_del_cancel_pressed"]
[connection signal="pressed" from="auth_rect/auth_window/vbox/login" to="." method="_login_pressed"]
[connection signal="pressed" from="auth_rect/auth_window/vbox/cancel" to="." method="_cancel_enter_pressed"]
